<resources>
    <string name="app_name">MerakiVendor</string>

    <!--SignIn Screen-->
    <string name="enter_email_id">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="txt_dont_hve_acnt">Don\&apos;t have an account?</string>
    <string name="btn_sign_up">SignUp</string>

    <string name="validate_login_screen">Please enter email id and password</string>
    <string name="validate_email_id">Please enter valid email id </string>
    <string name="validate_password">Please enter password </string>

    <!--SignUp Screen-->
    <string name="vendor_name">Vendor Name</string>
    <string name="email_id">Email Id</string>
    <string name="pin_code">Pin code</string>
    <string name="file_name">File Name</string>
    <string name="browse">Browse</string>
    <string name="deals_in">Deals in</string>
    <string name="password">Password</string>

    <string name="validate_sign_up_screen">All fields are mandatory</string>
    <string name="validate_vendor_name">Please enter vendor name</string>
    <string name="validate_pin_code">Please enter pin code</string>
    <string name="validate_deals_in">Please enter deals in</string>

    <!--Purchase Activity-->
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="pay">Pay</string>
    <string name="validate_price">Please enter price</string>
    <string name="validate_unit">Please enter unit</string>
    <string name="validate_quantity">Please enter quantity</string>


    <!--Purchase Activity-->
    <string name="or">OR</string>
    <string name="enter_customer_card_code">Enter 16-digit card number</string>
    <string name="enter_customer_mobile_no">Enter customer mobile number</string>
    <string name="btn_generate_otp">Generate OTP</string>

    <string name="enter_meraki_card_code_hint">XXXX XXXX XXXX XXXX</string>
    <string name="enter_meraki_card_code">Enter 16-digit card number</string>
    <string name="enter_mobile_no">Enter your mobile number</string>
    <string name="sent_otp_txt">We have sent OTP on your mobile number</string>
    <string name="enter_otp">Enter OTP here</string>
    <string name="resend_otp_txt">Didn\&apos;t get the OTP?</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_resend_otp">Resend OTP></string>

</resources>
