<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="Sign Up"
            android:textSize="20sp"
            android:textColor="@color/white_color"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputVenNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewHeader">

        <EditText
            android:id="@+id/editTextVendorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPersonName"
            android:hint="@string/vendor_name"
            android:text="Name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmailIdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputVenNameLayout">

        <EditText
            android:id="@+id/editTextEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputVenNameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPinCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputEmailIdLayout">

        <EditText
            android:id="@+id/editTextPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputEmailIdLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/pin_code"
            android:ems="10"
            android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputPinCodeLayout"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/file_name" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextFileName"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/editTextFileName"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:srcCompat="@drawable/ic_attach_file_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDealsInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextFileName">


        <EditText
            android:id="@+id/editTextDealsIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextFileName"
            android:layout_alignStart="@+id/editTextFileName"
            android:layout_below="@+id/editTextFileName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/deals_in" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPasswordInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputDealsInLayout">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputDealsInLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputPasswordInLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white_color"
            android:background="@drawable/button_login_background"/>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>