<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_green"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!--<EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="number" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@id/textInputCardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="-0.25dp"
                android:drawableRight="@drawable/ic_credit_card_black_24dp"
                android:hint="@string/enter_customer_card_code"
                android:inputType="phone"
                android:paddingRight="3dp"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:textSize="18sp"
                tools:ignore="LabelFor,NegativeMargin" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textViewOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputCardLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textColor="@color/white_color"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputMobNoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewOr">

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/enter_customer_mobile_no"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_marginTop="20dp"
                android:maxLines="1"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonGenerateOTP"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_login_background"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textInputMobNoLayout"
            android:text="@string/btn_generate_otp"
            android:textColor="@drawable/button_selector"
            android:textSize="16sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>