<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_green"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:background="@drawable/rounded_corner_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMeraki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="visible"
                android:textSize="16sp"
                android:textStyle="italic"
                android:gravity="end"
                android:text="MerakiCard"
                android:textColor="@color/white_color" />

            <TextView
                android:id="@+id/textViewEnterCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:visibility="visible"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/enter_meraki_card_code_hint"
                android:textColor="@color/white_color" />

            <!--<EditText
                android:id="@+id/cardNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-0.25dp"
                android:drawableRight="@drawable/ic_credit_card_black_24dp"
                android:layout_margin="5dp"
                android:hint="**** **** **** ****"
                android:inputType="phone"
                android:paddingRight="3dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_color"
                android:textSize="18sp"
                tools:ignore="LabelFor,NegativeMargin" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cardNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="-0.25dp"
                    android:drawableRight="@drawable/ic_credit_card_black_24dp"
                    android:hint="@string/enter_meraki_card_code"
                    android:inputType="phone"
                    android:paddingRight="3dp"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/white_color"
                    android:textSize="18sp"
                    tools:ignore="LabelFor,NegativeMargin" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white_color"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/enter_mobile_no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/white_color"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/buttonGenerateOTP"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_login_background"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/btn_generate_otp"
                android:textColor="@color/white_color"
                android:textSize="16sp" />


        </RelativeLayout>

    </LinearLayout>



</LinearLayout>
